--- a/kustomize/install/manager/kustomization.yaml
+++ b/kustomize/install/manager/kustomization.yaml
@@ -1,2 +1,19 @@
 resources:
 - manager.yaml
+
+patchesStrategicMerge:
+- |-
+  apiVersion: apps/v1
+  kind: Deployment
+  metadata:
+    name: pgo
+  spec:
+    template:
+      spec:
+        containers:
+        - name: operator
+          env:
+          - name: CRUNCHY_DEBUG
+            value: "false"
+          - name: CHECK_FOR_UPGRADES
+            value: "false"
