--- a/kustomize/postgres/postgres.yaml
+++ b/kustomize/postgres/postgres.yaml
@@ -6,13 +6,45 @@ spec:
   image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres:ubi8-15.4-0
   postgresVersion: 15
   instances:
-    - name: instance1
+    # name `db` will create pod name like: hippo-db1-lct8-0
+    - name: db1
+      replicas: 2
       dataVolumeClaimSpec:
         accessModes:
         - "ReadWriteOnce"
         resources:
           requests:
             storage: 1Gi
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            podAffinityTerm:
+              topologyKey: kubernetes.io/hostname
+              labelSelector:
+                matchLabels:
+                  postgres-operator.crunchydata.com/cluster: hippo
+                  postgres-operator.crunchydata.com/instance-set: db1
+    
+    # What kind of replicas this
+    - name: db2
+      replicas: 1
+      dataVolumeClaimSpec:
+        accessModes:
+        - "ReadWriteOnce"
+        resources:
+          requests:
+            storage: 1Gi
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            podAffinityTerm:
+              topologyKey: kubernetes.io/hostname
+              labelSelector:
+                matchLabels:
+                  postgres-operator.crunchydata.com/cluster: hippo
+                  postgres-operator.crunchydata.com/instance-set: db2
   backups:
     pgbackrest:
       image: registry.developers.crunchydata.com/crunchydata/crunchy-pgbackrest:ubi8-2.47-0
@@ -25,3 +57,46 @@ spec:
             resources:
               requests:
                 storage: 1Gi
+
+  # connection pool
+  proxy:
+    pgBouncer:
+      image: registry.developers.crunchydata.com/crunchydata/crunchy-pgbouncer:ubi8-1.19-4
+      replicas: 2
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            podAffinityTerm:
+              topologyKey: kubernetes.io/hostname
+              labelSelector:
+                matchLabels:
+                  postgres-operator.crunchydata.com/cluster: hippo
+                  postgres-operator.crunchydata.com/role: pgbouncer
+
+      # spec.proxy.pgBouncer.service
+      # expose to the world => add this will failed to create pods, plz check
+      # For more detail on definition: See the kustomize/install/crd/base/postgres-operator.crunchydata.com_postgresclusters.yaml
+      # But it still not work as expected, no 35432 port service created :(
+      # Comment this custom service, let as default: 
+      # We'll got service: `hippo-pgbouncer   ClusterIP  pgbouncer:5432►0`
+      #
+      # service:
+      #   metadata:
+      #     labels:
+      #       app: f2e-api
+      #   type: NodePort
+      #   nodePort: 35432
+  
+  # But it still not work as expected, no 35432 port service created :(
+  # service:
+  #   metadata:
+  #     labels:
+  #       app: f2e-api
+  #   type: NodePort
+  #   nodePort: 35432
+
+  monitoring:
+    pgmonitor:
+      exporter:
+        image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres-exporter:ubi8-5.4.2-0
